--- a/archivos-front-end/javascript/index.html
+++ b/archivos-front-end/javascript/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>>, initial-scale=1.0">
     <title>JavaScript</title>
+    <link rel="stylesheet" type="text/css" href="style.css"media="screen"/>
 </head>
 <body>
-    <a href="/js1">javascript1</a>
-    <a href="/js2">javascript2</a>
-    <a href="/calculadora">calculadora</a>
+    <a href="js1/index.html" target="_blank">javascript1</a>
+    <a href="js2/index.html" target="_blank">javascript2</a>
+    <a href="calculadora/index.html" target="_blank">calculadora</a>
+    <a href="peliculas/index.html" target="_blank">Peliculas</a>
 </body>
 </html>
