--- a/archivos-front-end/javascript/index2.html
+++ b/archivos-front-end/javascript/index2.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css"media="screen"/>
 </head>
 <body>
-    <a href="js1/index.html" target="_blank">javascript1</a>
-    <a href="js2/index.html" target="_blank">javascript2</a>
-    <a href="calculadora/index.html" target="_blank">calculadora</a>
-    
+    <a href="peliculas/index.html" target="_blank">Peliculas</a>
 </body>
 </html>
